# cocoGUI

./: .env.in  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  async_api.json  compose.yaml  open_api.json  package-lock.json
.github/workflows/: npm-publish.yml
client/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
client-old/: index.html
client-old/src/: knowledge.js  type.js
client-old/src/components/: SolverGraph.vue  SolverTimelines.vue  TaxonomyGraph.vue  Type.vue  TypeListItem.vue
client/src/: App.vue  error.ts  graph.ts  index.ts  item.js  knowledge.js  knowledge.ts  main.js  main.ts  message.ts  sensor.js  sensorD3.js  solver.js  solver.ts  solverD3.js  timelines.ts  type.js  type.ts
client/src/components/: BooleanProperty.vue  BooleanPropertyPublisher.vue  Chat.vue  DeliberativeRule.vue  Frame.vue  IntPropertyPublisher.vue  IntegerProperty.vue  Item.vue  ItemChart.vue  ItemListItem.vue  ItemProperty.vue  ItemPropertyPublisher.vue  ItemPublisher.vue  LogInDialog.vue  Login.vue  Map.vue  MultipleSymbolPublisher.vue  NewSensor.vue  NewSensorType.vue  NewUser.vue  ReactiveRule.vue  RealProperty.vue  RealPropertyPublisher.vue  RealPublisher.vue  RegisterDialog.vue  RuleListItem.vue  Sensor.vue  SensorChart.vue  SensorListItem.vue  SensorPublisher.vue  SensorType.vue  SensorTypeListItem.vue  SensorValue.vue  SingleSymbolPublisher.vue  Solver.vue  SolverGraph.vue  SolverListItem.vue  SolverTimelines.vue  StringProperty.vue  StringPropertyPublisher.vue  (+8 more)
client/src/plugins/: index.js
client/src/store/: app.js  coco.js  coco.ts
client/src/tests/: data.js
coco-client/: README.md  components.d.ts  index.html  package-lock.json  package.json
coco-client/icons/: Icons.pptx
coco-client/src/: App.vue  knowledge.ts  solver.ts  timelines.ts  type.ts  value.ts
coco-client/src/assets/: main.css
coco-client/src/components/: BooleanPublisher.vue  Chat.vue  DeliberativeRule.vue  IntPublisher.vue  Item.vue  ItemChart.vue  ItemListItem.vue  ItemPublisher.vue  MultipleSymbolPublisher.vue  RealPublisher.vue  SingleSymbolPublisher.vue  Solver.vue  SolverGraph.vue  SolverTimelines.vue  StringPublisher.vue  TaxonomyGraph.vue  Type.vue  TypeListItem.vue
coco-client/src/plugins/: index.ts
coco-client/src/router/: index.ts
coco-client/src/stores/: coco.ts
coco-client/src/tests/: data.ts
coco-client/src/views/: ChatView.vue  DeliberativeRuleView.vue  HomeView.vue  ItemView.vue  ReactiveRuleView.vue  SolverView.vue  TypeView.vue
coco-gui/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
coco-gui/src/: coco.ts  index.ts  rule.ts  solver.ts  taxonomy.ts  timelines.ts  user.ts  utils.ts  values.ts
coco-gui/src/components/: CoCoApp.vue  CocoApp.vue  CocoChat.vue  CocoFrame.vue  CocoLayout.vue  CocoLogin.vue  CocoMap.vue  FrameComponent.vue
coco-gui/src/components/properties/: BooleanProperty.vue  IntegerProperty.vue  ItemProperty.vue  RealProperty.vue  StringProperty.vue  SymbolProperty.vue
coco-gui/src/components/solver/: Solver.vue  SolverGraph.vue  SolverListItem.vue  SolverTimelines.vue
coco-gui/src/components/taxonomy/: DeliberativeRule.vue  Item.vue  ItemChart.vue  ItemListItem.vue  ItemPublisher.vue  ItemTable.vue  ReactiveRule.vue  TaxonomyGraph.vue  Type.vue  TypeListItem.vue
coco-gui/src/stores/: coco.ts
coco-lib/: README.md  package-lock.json  package.json  tsconfig.json
coco-lib/src/: coco.ts  graph.ts  index.ts  solver.ts  values.ts
coco-lib/src/components/: Chat.vue  FrameComponent.vue  LogInDialog.vue  Map.vue
coco-lib/src/components/properties/: BooleanProperty.vue  IntegerProperty.vue  ItemProperty.vue  StringProperty.vue  SymbolProperty.vue
coco-lib/src/components/solver/: Solver.vue  SolverGraph.vue  SolverListItem.vue  SolverTimelines.vue
coco-lib/src/components/taxonomy/: Item.vue  ItemChart.vue  ItemListItem.vue  ItemPublisher.vue  ReactiveRule.vue  TaxonomyGraph.vue  Type.vue
include/: coco_gui.h  coco_server.hpp
src/: cocoGUIConfig.cmake.in  coco_gui.cpp  coco_main.cpp  coco_server.cpp  main.cpp  ratio_main.cpp
tests/: buses.py  ctemt.py  geo.py  luxant.py  matera.py  pub.py  raise.py  restart.py  sock.py  tax0.py  test.clp
tests/ctemt/: assertions.py  taxonomy.py
